--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@
 [Mm]emoryCaptures/
 
 #MacOS Stuff
-.DS_Store
+**/.DS_Store
 
 # Asset meta data should only be ignored when the corresponding asset is also ignored
 !/[Aa]ssets/**/*.meta
